# rust-3d-engine

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  mat4x4.rs  mesh.rs  triangle.rs  vec2d.rs  vec3d.rs
