[package]
name = "engine-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
pixels = "0.13.0"
pixels_primitives = "0.1.1"
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.16"
